<resources>
    <string name="app_name">Marvel Explorer</string>
    <string name="character_item">Character item</string>
    <string name="character_portrait">Character portrait</string>
    <string name="description_item_saveButton">Add this character to favorites</string>
    <string name="marvel_copyright_text">Data provided by Marvel. © 2024 Marvel</string>
    <string name="hint_searchBar_charactersList">Start typing name to search…</string>
    <string name="text_buttonToFavorites">Favorites</string>
    <string name="comics_image">Comics image</string>
    <string name="header_comics_list">Comics List</string>
    <string name="description_comic_item">Comic item</string>
    <string name="description_splashScreen">Application icon</string>
    <string name="textView_no_internet_connection">No internet connection</string>
</resources>