<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp"
    android:contentDescription="@string/character_item"
    app:cardBackgroundColor="?attr/cardBackgroundColor"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/characterItemImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/character_portrait"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/characterItemName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="47dp"
            android:layout_marginBottom="46dp"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/characterItemImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Simple Text" />

        <ImageButton
            android:id="@+id/characterItemLikeButton"
            style="@android:style/Widget.DeviceDefault.ImageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="60dp"
            android:background="#00FFFFFF"
            android:clickable="true"
            android:contentDescription="@string/description_item_saveButton"
            android:focusable="true"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/shield_colored" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
