<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <EditText
        android:id="@+id/listCharactersFragmentSearchBarEditText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:textAppearance="?attr/textAppearanceBody2"
        android:gravity="bottom"
        android:hint="@string/hint_searchBar_charactersList"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/listCharactersFragmentProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="?attr/colorSecondary" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/listCharactersFragmentSwipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.84"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listCharactersFragmentRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/listCharactersFragmentCopyrightTextView"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_gravity="center"
        android:layout_weight="0.05"
        android:gravity="center"
        android:text="@string/marvel_copyright_text"
        android:textAppearance="?attr/textAppearanceCaption" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/listCharactersFragmentButtonFavorites"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_weight="0"
        android:text="@string/text_buttonToFavorites"
        android:textAppearance="?attr/textAppearanceButton"/>

</LinearLayout>